Tag picker: Fix for margin in the overflow

--- a/packages/office-ui-fabric-react/src/components/pickers/BasePicker.scss
+++ b/packages/office-ui-fabric-react/src/components/pickers/BasePicker.scss
@@ -6,7 +6,7 @@
   box-sizing: border-box;
   border: 1px solid $ms-color-neutralLight;
   min-width: 180px;
-  padding: 1px;
+  padding: 4px;
 
   &:hover {
     border-color: $ms-color-themeLight;
